# randalf

./: .gitignore  .gitlab-ci.yml  .jscpd.json  .zizmor.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  devskim.yml  msdo.yml  osv-scanner.yml  publish.yml  pypi.yml  scorecards.yml  super-linter.yml
src/randalf/: __init__.py  __main__.py  cli.py  core.py  randalf.py
