[project]
name = "randalf"
version = "1.0.0"
authors = [
  { name="Thomas Leplus", email="thomas@leplus.org" },
]
maintainers = [
  { name="Thomas Leplus", email="thomas@leplus.org" },
]
description = "Generates a random string of desired length using chosen alphabet."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = ["random", "PRNG", "generator"]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "rich==14.3.3",
  "typer==0.24.1",
  "typing-extensions==4.15.0",
]

[project.urls]
Changelog = "https://github.com/leplusorg/randalf/releases"
Documentation = "https://github.com/leplusorg/randalf"
Download = "https://github.com/leplusorg/randalf/releases"
Homepage = "https://github.com/leplusorg/randalf"
Issues = "https://github.com/leplusorg/randalf/issues"
ReleaseNotes = "https://github.com/leplusorg/randalf/releases"
Source = "https://github.com/leplusorg/randalf.git"

[build-system]
requires = ["uv_build>=0.11.6,<8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff==0.15.10",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
ignore = ["E203"]

[tool.black]
line-length = 120

[project.scripts]
randalf = "randalf.cli:app"

[project.entry-points."pipx.run"]
randalf = "randalf.cli:app"
